# zee

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.cargo/: config  config.toml
.github/workflows/: build.yml  cffconvert.yml  publish.yml
core/: Cargo.toml
core/src/: clipboard.rs  editor.rs  main.rs  mode.rs  settings.rs  smallstring.rs  undo.rs  utils.rs  versioned.rs
core/src/components/: cursor.rs  edit_tree_viewer.rs  emojis.rs  mod.rs  splash.rs
core/src/components/buffer/: line_info.rs  mod.rs  status_bar.rs  textarea.rs
core/src/components/prompt/: buffers.rs  matcher.rs  mod.rs  picker.rs  status.rs
core/src/components/theme/: mod.rs
core/src/edit/: cursor.rs  graphemes.rs  mod.rs
core/src/editor/: buffer.rs  mod.rs  windows.rs
core/src/syntax/: highlight.rs  mod.rs  parse.rs
grammar/: Cargo.toml  build.rs
grammar/src/: lib.rs
highlight/: Cargo.toml
highlight/languages/: bash.json  cpp.json  css.json  html.json  javascript.json  markdown.json  python.json  rust-v2.json  rust.json  typescript.json
highlight/src/: error.rs  lib.rs  selector.rs
scripts/: build  check
src/: editor.rs  error.rs  jobs.rs  main.rs  mode.rs  settings.rs  smallstring.rs  task.rs  undo.rs  utils.rs
src/components/: buffer.rs  cursor.rs  edit_tree_viewer.rs  mod.rs  prompt.rs  splash.rs  syntax.rs  theme.rs
src/components/buffer/: line_info.rs  mod.rs  status_bar.rs
src/components/prompt/: mod.rs  picker.rs  status.rs
src/components/theme/: base16.rs  mod.rs
src/frontend/: crossterm.rs  mod.rs  termion.rs
src/syntax/: highlight.rs  mod.rs  parse.rs  syntax.rs
src/terminal/: input.rs  mod.rs  screen.rs
src/ui/: input.rs  mod.rs  screen.rs
src/ui/components/: buffer.rs  mod.rs  prompt.rs  splash.rs  theme.rs
syntect/syntax/: plain.sublime-syntax
syntect/themes/: gruvbox-dark-hard.sublime-color-scheme  gruvbox-dark-hard.tmTheme  gruvbox-dark-soft.sublime-color-scheme  gruvbox-dark-soft.tmTheme
test-data/: .gitignore  sample.json  unicode-sample.html  unicode-sample.plain
website/: docusaurus.config.js  package.json
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
zee/: Cargo.toml  build.rs  modes.ron
zee-edit/: Cargo.toml
zee-edit/src/: diff.rs  graphemes.rs  lib.rs  movement.rs  tree.rs
zee-grammar/: Cargo.toml
zee-grammar/src/: builder.rs  config.rs  git.rs  lib.rs  mode.rs
zee-highlight/: Cargo.toml
zee-highlight/languages/: javascript.json  markdown.json  rust.json
zee-highlight/src/: lib.rs  selector.rs
zee/config/: config.ron
zee/config/queries/json/: highlights.scm
zee/config/queries/markdown/: highlights.scm
zee/config/queries/protobuf/: highlights.scm
zee/config/queries/rust/: highlights.scm
zee/config/queries/toml/: highlights.scm
zee/highlights/: c.json  json.json  markdown.json  tsx.json
zee/src/: config.rs  logging.rs  main.rs  mode.rs  panicking.rs  settings.rs  task.rs  utils.rs  versioned.rs
zee/src/components/: edit_tree_viewer.rs  input.rs  mod.rs
zee/src/components/buffer/: line_info.rs  mod.rs  status_bar.rs  textarea.rs
zee/src/components/prompt/: buffers.rs  interactive.rs  matcher.rs  mod.rs  picker.rs  status.rs
zee/src/components/theme/: base16.rs  mod.rs
zee/src/edit/: tree.rs
zee/src/editor/: bindings.rs  buffer.rs  mod.rs  windows.rs
zee/src/syntax/: highlight.rs  mod.rs  parse.rs
zi/: Cargo.toml  README.md
zi/benches/: senders.rs
zi/examples/: counter.rs  mandelbrot.rs  splash.rs  todo.rs
zi/logo/: logo.xcf
zi/src/: app.rs  error.rs  lib.rs  task.rs
zi/src/component/: border.rs  input.rs  layout.rs  mod.rs  select.rs  template.rs  text.rs
zi/src/components/: border.rs  input.rs  mod.rs  select.rs  text.rs
zi/src/frontend/: crossterm.rs  mod.rs  painter.rs  termion.rs  utils.rs
zi/src/terminal/: canvas.rs  input.rs  mod.rs
zi/src/text/: cursor.rs  mod.rs  rope.rs  string.rs
