[package]
name = "zee"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
clap = "2.33.0"
crossbeam-channel = "0.4.0"
dirs = "2.0.2"
euclid = "0.20.4"
fuzzy-matcher = "0.3.1"
git2 = "0.11.0"
ignore = "0.4.10"
lazy_static = "1.4.0"
num_cpus = "1.11.1"
rayon = "1.2.1"
ropey = "1.1.0"
size_format = "1.0.2"
smallvec = "1.0.0"
structopt = "0.3.4"
termion = "1.5.3"
thiserror = "1.0.11"
tree-sitter = "0.5.0"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.6"

# Local crates
zee-grammar = { path = "grammar" }
zee-highlight = { path = "highlight" }

# Optional dependencies
crossterm = { version = "0.14.2", optional = true}

[features]
default = ["frontend-crossterm"]

# Enables a terminal frontend using `crossterm`.
frontend-crossterm = [
  "crossterm",
]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
