[package]
name = "zee"
version = "0.1.1"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A modern editor for the terminal"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zee"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.26"
clap = "2.33.0"
crossbeam-channel = "0.4.0"
dirs = "2.0.2"
euclid = "0.20.4"
flexi_logger = "0.15.1"
fuzzy-matcher = "0.3.1"
git2 = "0.11.0"
ignore = "0.4.10"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
num_cpus = "1.11.1"
pkg-version = "1.0.0"
rayon = "1.2.1"
ropey = "1.1.0"
size_format = "1.0.2"
smallvec = "1.0.0"
structopt = "0.3.4"
thiserror = "1.0.11"
tree-sitter = "0.6.3"
ttmap = "0.1.0"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.6"

# Local crates
zee-grammar = { version = "0.1.0", path = "grammar" }
zee-highlight = { version = "0.1.1", path = "highlight" }

# Optional dependencies
crossterm = { version = "0.14.2", optional = true}
termion = { version = "1.5.3", optional = true}

[features]
default = ["frontend-crossterm", "frontend-termion"]

# Enables a terminal frontend using `crossterm`.
frontend-crossterm = [
  "crossterm",
]

frontend-termion = [
  "termion",
]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
