[package]
name = "zee"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A modern editor for the terminal"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zee"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
anyhow = "1.0.38"
cfg-if = "1.0.0"
clap = "2.33.3"
crossbeam-channel = "0.5.0"
dirs = "3.0.2"
euclid = "0.22.3"
flexi_logger = "0.17.1"
fuzzy-matcher = "0.3.7"
git2 = "0.13.17"
ignore = "0.4.17"
log = "0.4.14"
maplit = "1.0.2"
once_cell = "1.7.2"
palette = "0.5.0"
parking_lot = "0.11.1"
pkg-version = "1.0.0"
rayon = "1.5.0"
ropey = "1.2.0"
serde = "1.0.125"
serde_derive = "1.0.125"
size_format = "1.0.2"
smallstr = "0.3.0"
smallvec = "1.6.1"
structopt = "0.3.21"
thiserror = "1.0.24"
toml = "0.5.8"
tree-sitter = "0.19.3"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"
zi = "0.2.0"
zi-term = "0.2.0"

# Local crates
zee-grammar = { version = "0.2.0", path = "../grammar" }
zee-highlight = { version = "0.2.0", path = "../highlight" }

# Optional dependencies
crossclip = { optional = true, version = "0.7.0" }

[features]
default = ["system-clipboard"]

# Enables integration with the system's clipboard.
system-clipboard = [
  "crossclip",
]
