[package]
name = "zee"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A modern editor for the terminal"
readme = "README.md"
homepage = "https://github.com/mcobzarenco/zee"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
anyhow = "1.0.56"
cfg-if = "1.0.0"
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0.0"
euclid = "0.22.6"
flexi_logger = "0.22.3"
fuzzy-matcher = "0.3.7"
git2 = "0.14.2"
ignore = "0.4.18"
log = "0.4.16"
maplit = "1.0.2"
once_cell = "1.10.0"
palette = "0.5.0"
parking_lot = "0.12.0"
pkg-version = "1.0.0"
rayon = "1.5.1"
ropey = "1.4.1"
serde = "1.0.136"
serde_derive = "1.0.136"
size_format = "1.0.2"
smallstr = "0.3.0"
smallvec = "1.8.0"
thiserror = "1.0.30"
toml = "0.5.8"
tree-sitter = "0.20.6"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
zi = "0.2.0"
zi-term = "0.2.0"

# Local crates
zee-grammar = { version = "0.2.0", path = "../grammar" }
zee-highlight = { version = "0.2.0", path = "../highlight" }

# Optional dependencies
crossclip = { optional = true, version = "0.7.0" }

[features]
default = ["system-clipboard"]

# Enables integration with the system's clipboard.
system-clipboard = [
  "crossclip",
]
