[package]
name = "zee-grammar"
version = "0.1.3"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Wrappers for tree sitter grammars used by zee"
homepage = "https://github.com/mcobzarenco/zee/tree/master/grammar"
license = "Apache-2.0"
edition = "2018"

[dependencies]
once_cell = "1.5.2"
tree-sitter = "0.17.1"

[build-dependencies]
cc = { version = "1.0.66", features = ["parallel"] }
tree-sitter = "0.17.1"
