[package]
name = "zee-grammar"
version = "0.2.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Wrappers for tree sitter grammars used by zee"
homepage = "https://github.com/mcobzarenco/zee/tree/master/grammar"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.59"
include = ["/languages", "/src"]

[dependencies]
once_cell = "1.10.0"
tree-sitter = "0.20.6"

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
tree-sitter = "0.20.6"
