[package]
name = "zee-highlight"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Utility for highlighting source code with CSS-like rules used by zee"
homepage = "https://github.com/mcobzarenco/zee/tree/master/highlight"
license = "Apache-2.0"
edition = "2018"

[dependencies]
fnv = "1.0.6"
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
nom = "5.0.1"
regex = "1.3.1"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
serde_regex = "0.4.0"
smallvec = { version = "1.0.0", features = ["serde"] }
tree-sitter = "0.6.3"

zee-grammar = { version = "0.1.0", path = "../grammar" }
