[package]
name = "zee-highlight"
version = "0.1.2"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Utility for highlighting source code with CSS-like rules used by zee"
homepage = "https://github.com/mcobzarenco/zee/tree/master/highlight"
license = "Apache-2.0"
edition = "2018"

[dependencies]
fnv = "1.0.7"
lazy_static = "1.4.0"
log = "0.4.14"
maplit = "1.0.2"
nom = "5.1.2"
regex = "1.4.3"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_regex = "1.1.0"
smallvec = { version = "1.6.1", features = ["serde"] }
tree-sitter = "0.17.1"

zee-grammar = { version = "0.1.2", path = "../grammar" }
