[package]
name = "zee-edit"
version = "0.1.1"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Core text editing functionality for zee"
homepage = "https://github.com/zee-editor/zee"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
euclid = "0.22.7"
ropey = "1.4.1"
smallvec = "1.8.0"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
