[package]
name = "zee-highlight"
version = "0.3.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "Utility for highlighting source code with CSS-like rules used by zee"
homepage = "https://github.com/mcobzarenco/zee/tree/master/highlight"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.59"

[dependencies]
fnv = "1.0.7"
log = "0.4.16"
maplit = "1.0.2"
nom = "5.1.2"
regex = "1.5.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
serde_regex = "1.1.0"
smallvec = { version = "1.8.0", features = ["serde"] }
tree-sitter = "0.20.6"
