[package]
name = "zee"
version = "0.4.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A modern editor for the terminal, in the spirit of Emacs"
readme = "README.md"
homepage = "https://github.com/zee-editor/zee"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"
include = ["/src", "/config"]

[dependencies]
anyhow = "1.0.57"
backtrace = "0.3.65"
cfg-if = "1.0.0"
clap = { version = "3.1.12", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
euclid = "0.22.7"
flexi_logger = "0.22.3"
fuzzy-matcher = "0.3.7"
git2 = "0.14.2"
ignore = "0.4.18"
include_dir = "0.7.2"
log = "0.4.16"
maplit = "1.0.2"
once_cell = "1.10.0"
palette = "0.5.0"
parking_lot = "0.12.0"
pkg-version = "1.0.0"
rayon = "1.5.2"
ron = "0.7.0"
ropey = "1.4.1"
serde = "1.0.136"
serde_derive = "1.0.136"
size_format = "1.0.2"
smallstr = "0.3.0"
smallvec = "1.8.0"
thiserror = "1.0.30"
tree-sitter = "0.20.6"
zi = "0.3.2"
zi-term = "0.3.2"

# Local crates
zee-edit = { version = "0.1.1", path = "../zee-edit" }
zee-grammar = { version = "0.4.0", path = "../zee-grammar" }

# Optional dependencies
crossclip = { optional = true, version = "0.7.0" }

[build-dependencies]
anyhow = "1.0.57"
ron = "0.7.0"
include_dir = "0.7.2"
serde = "1.0.136"
serde_derive = "1.0.136"

# Local crates
zee-grammar = { version = "0.4.0", path = "../zee-grammar" }

[features]
default = []

# Enables integration with the system's clipboard.
system-clipboard = [
  "crossclip",
]
