[package]
name = "zee"
version = "0.4.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
description = "A modern editor for the terminal, in the spirit of Emacs"
readme = "README.md"
homepage = "https://github.com/zee-editor/zee"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.59"
include = ["/src", "/config"]

[dependencies]
anyhow = "1.0.58"
backtrace = "0.3.66"
cfg-if = "1.0.0"
clap = { version = "3.2.14", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
euclid = "0.22.7"
flexi_logger = "0.22.5"
fuzzy-matcher = "0.3.7"
git2 = "0.14.4"
ignore = "0.4.18"
include_dir = "0.7.2"
log = "0.4.17"
maplit = "1.0.2"
once_cell = { version = "1.13.0", features = ["parking_lot"] }
palette = "0.5.0"
parking_lot = "0.12.1"
pkg-version = "1.0.0"
rayon = "1.5.3"
ron = "0.7.1"
ropey = "1.5.0"
serde = "1.0.140"
serde_derive = "1.0.140"
size_format = "1.0.2"
smallstr = "0.3.0"
smallvec = "1.9.0"
thiserror = "1.0.31"
time-humanize = "0.1.3"
tree-sitter = "0.20.8"
zi = "0.3.2"
zi-term = "0.3.2"

# Local crates
zee-edit = { version = "0.1.1", path = "../zee-edit" }
zee-grammar = { version = "0.4.0", path = "../zee-grammar" }

# Optional dependencies
crossclip = { optional = true, version = "0.7.1" }

[build-dependencies]
anyhow = "1.0.58"
ron = "0.7.1"
include_dir = "0.7.2"
serde = "1.0.140"
serde_derive = "1.0.140"

# Local crates
zee-grammar = { version = "0.4.0", path = "../zee-grammar" }

[features]
default = []

# Enables integration with the system's clipboard.
system-clipboard = [
  "crossclip",
]
