[package]
name = "zi"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
euclid = "0.20.10"
log = "0.4.8"
num_cpus = "1.13.0"
once_cell = "1.3.1"
rayon = "1.3.0"
ropey = "1.1.0"
smallstr = "0.2.0"
smallvec = "1.4.0"
thiserror = "1.0.16"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"

# Optional dependencies
crossterm = { version = "0.17.1", optional = true }
termion = { version = "1.5.3", optional = true}
maplit = "1.0.2"

[dev-dependencies]
colorous = "1.0.2"
num-complex = "0.2.4"
rayon = "1.3.0"

[features]
default = ["frontend-crossterm", "frontend-termion"]

# Enables a terminal frontend using `crossterm`.
frontend-crossterm = [
  "crossterm",
]

frontend-termion = [
  "termion",
]
