[package]
name = "zi"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
crossbeam-channel = "0.4.2"
euclid = "0.20.13"
log = "0.4.8"
maplit = "1.0.2"
ropey = "1.2.0"
smallstr = "0.2.0"
smallvec = "1.4.0"
thiserror = "1.0.20"
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"

# Optional dependencies
crossterm = { version = "0.17.5", optional = true }
termion = { version = "1.5.3", optional = true}

[dev-dependencies]
colorous = "1.0.2"
criterion = "0.3.2"
num-complex = "0.2.4"
rayon = "1.3.0"

[features]
default = ["frontend-crossterm", "frontend-termion"]

# Enables a terminal frontend using `crossterm`.
frontend-crossterm = [
  "crossterm",
]

frontend-termion = [
  "termion",
]

[[bench]]
name = "senders"
harness = false
