[package]
name = "zi"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
euclid = "0.20.13"
futures = "0.3.5"
log = "0.4.8"
maplit = "1.0.2"
ropey = "1.2.0"
smallstr = "0.2.0"
smallvec = "1.4.0"
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["io-util", "macros", "rt-core", "sync", "time"] }
unicode-segmentation = "1.6.0"
unicode-width = "0.1.7"

# Optional dependencies
[dependencies.crossterm]
optional = true
features = ["event-stream"]
git = "https://github.com/crossterm-rs/crossterm.git"
rev = "c5fc1a14931a2a11379b0c88024bdb40a5fecf77"

[dev-dependencies]
colorous = "1.0.2"
criterion = "0.3.2"
env_logger = "0.7.1"
num-complex = "0.2.4"
rayon = "1.3.0"

[features]
default = ["frontend-crossterm"]

# Enables a terminal frontend using `crossterm`.
frontend-crossterm = [
  "crossterm",
]

[[bench]]
name = "senders"
harness = false
